V0.1
--------------------------------------
- Fixed MyPage crash
- Removed redundant method "setFarmerPassword"