@@ -2,3 +2,5 @@ V0.1
 --------------------------------------
 - Fixed MyPage crash
 - Removed redundant method "setFarmerPassword"
+- Added "updateFarmerContact" and "hasFarmerContact"
+- Contact information now loads to Mypage
